Implement Discord modal handling